syntax = "proto3";

package service.srv.user;

service UserService {
    rpc createUser (CreateUserDto) returns (CreateUserResponse);
    rpc getUser (FindCurrentUserRequest) returns (GetUserResponse);
    rpc loginUser (LoginRequest) returns (LoginResponse);
}

message User {
    string id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    bool verified = 5;
    string verificationCode = 6; 
}

message LoginResponse {
    User user = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}
message CreateUserDto {
    string name = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

message GetUserResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    bool verified = 4;
    string verificationCode = 5;
}

message FindCurrentUserRequest {
    string userId = 1;
}


message CreateUserResponse {
    string accessToken = 1;
}

